--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLBuscaPedido.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLBuscaPedido.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="rootPane" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLEquipmentSearchController">
+<VBox fx:id="rootPane" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLBuscaPedidoController">
    <children>
-      <Label styleClass="DWORScreenTitleII" text="Busca de Equipamentos" />
+      <Label styleClass="DWORScreenTitleII" text="Busca de Pedidos" />
       <HBox alignment="CENTER" spacing="15.0">
          <children>
             <JFXTextField fx:id="tfieldSearch" labelFloat="true" onAction="#actSPSearch" prefHeight="30.0" promptText="Insira o termo de busca" HBox.hgrow="ALWAYS">
@@ -38,11 +38,10 @@
       </HBox>
       <TableView fx:id="tviewSearch" prefHeight="200.0" VBox.vgrow="ALWAYS">
          <columns>
-            <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="50.0" prefWidth="60.0" text="ID" />
-            <TableColumn fx:id="tviewColEquipmentType" editable="false" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Tipo" />
-            <TableColumn fx:id="tviewColEquipmentModel" maxWidth="150.0" minWidth="150.0" prefWidth="-1.0" resizable="false" text="Modelo" />
-            <TableColumn fx:id="tviewColEquipmentBrand" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Marca" />
-            <TableColumn fx:id="tviewColEquipmentSerialNumber" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="-1.0" text="Nº Serie" />
+            <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="50.0" prefWidth="20.0" resizable="false" text="ID" />
+            <TableColumn fx:id="tviewColDescription" editable="false" maxWidth="1.7976931348623157E308" minWidth="237.0" prefWidth="326.0" resizable="false" text="Descrição" />
+         	<TableColumn fx:id="tviewColdata" maxWidth="258.0" minWidth="126.0" prefWidth="142.0" resizable="false" text="Data Pedido" />
+            <TableColumn fx:id="tviewColValortotal" maxWidth="258.0" minWidth="118.0" prefWidth="143.0" resizable="false" text="Valor Total" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
