--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLPedidoBusca.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLPedidoBusca.fxml
@@ -12,10 +12,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox fx:id="rootPane" minHeight="620.0" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLContactSearchController">
+<VBox fx:id="rootPane" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLBuscaPedidoController">
    <children>
-      <Label styleClass="DWORScreenTitleII" text="Busca de Contatos" />
+      <Label styleClass="DWORScreenTitleII" text="Busca de Pedidos" />
       <HBox alignment="CENTER" spacing="15.0">
          <children>
             <JFXTextField fx:id="tfieldSearch" labelFloat="true" onAction="#actSPSearch" prefHeight="30.0" promptText="Insira o termo de busca" HBox.hgrow="ALWAYS">
@@ -37,13 +36,13 @@
             </JFXButton>
          </children>
       </HBox>
-      <TableView fx:id="tviewPessoas" VBox.vgrow="ALWAYS">
+      <TableView fx:id="tviewSearch" prefHeight="200.0" VBox.vgrow="ALWAYS">
          <columns>
-            <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="35.0" prefWidth="60.0" text="ID" />
-            <TableColumn fx:id="tviewColName" editable="false" maxWidth="1.7976931348623157E308" minWidth="60.0" prefWidth="-1.0" text="Nome" />
-            <TableColumn fx:id="tviewColCPFCNPJ" maxWidth="-1.0" minWidth="120.0" prefWidth="180.0" text="CPF/CNPJ" />
-            <TableColumn fx:id="tviewColPhones" maxWidth="-1.0" minWidth="150.0" prefWidth="180.0" text="Telefone" />
-            <TableColumn fx:id="tviewColAddresses" maxWidth="-1.0" minWidth="150.0" prefWidth="180.0" text="Endereços" />
+            <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="50.0" prefWidth="60.0" text="ID" />
+            <TableColumn fx:id="tviewColProd" editable="false" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Produto" />
+            <TableColumn fx:id="tviewColFornecedor" maxWidth="150.0" minWidth="150.0" prefWidth="-1.0" resizable="false" text="Fornecedor" />
+            <TableColumn fx:id="tviewColData" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Data" />
+            <TableColumn fx:id="tviewColAutorizado" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="-1.0" text="Autorizado" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -97,6 +96,22 @@
                      <styleClass>
                         <String fx:value="JFXButtonDefault" />
                         <String fx:value="JFXButtonDelete" />
+                        <String fx:value="JFXButtonCompactII" />
+                     </styleClass>
+                  </JFXButton>
+                  <JFXButton fx:id="btnGoBack" buttonType="RAISED" onAction="#actGoBack" prefWidth="150.0" ripplerFill="#282a2f" text="Voltar">
+                     <effect>
+                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+                     </effect>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                     <graphic>
+                        <FontAwesomeIconView fill="WHITE" glyphName="REPLY" size="20" />
+                     </graphic>
+                     <styleClass>
+                        <String fx:value="JFXButtonDefault" />
+                        <String fx:value="JFXButtonCancel" />
                         <String fx:value="JFXButtonCompactII" />
                      </styleClass>
                   </JFXButton>
