--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLSaidaRegistration.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLSaidaRegistration.fxml
@@ -13,13 +13,14 @@
 
 <VBox fx:id="rootPane" minHeight="400.0" minWidth="790.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLSaidaRegistrationController">
    <children>
-      <Label styleClass="DWORScreenTitleII" text="Saida de Produtos" />
-      <TableView fx:id="tviewSearch" prefHeight="100.0" VBox.vgrow="ALWAYS">
+      <Label styleClass="DWORScreenTitleII" text="Estoque de Produtos" />
+      <TableView fx:id="tviewSearch" minWidth="100.0" onMouseClicked="#actTableviewSelectItem" prefHeight="300.0" VBox.vgrow="ALWAYS">
          <columns>
             <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="50.0" prefWidth="60.0" text="ID" />
-            <TableColumn fx:id="tviewColProductDescription" editable="false" maxWidth="1.7976931348623157E308" minWidth="400.0" prefWidth="-1.0" text="Descrição" />
-            <TableColumn fx:id="tviewColPartUnitQuant" maxWidth="150.0" minWidth="150.0" prefWidth="-1.0" resizable="false" text="Qtde estoque" />
-            <TableColumn fx:id="tviewColPartUnitQuantM" maxWidth="150.0" minWidth="150.0" prefWidth="-1.0" resizable="false" text="Quantidade Retirada" />
+            <TableColumn fx:id="tviewColProductDescription" editable="false" maxWidth="395.0" minWidth="259.0" prefWidth="313.0" text="Descrição" />
+            <TableColumn fx:id="tviewColPartUnitQuant" maxWidth="291.0" minWidth="115.0" prefWidth="138.0" resizable="false" text="Qtde estoque" />
+            <TableColumn fx:id="tviewColPartUnitQuantM" maxWidth="271.0" minWidth="139.0" prefWidth="139.0" resizable="false" text="Quantidade Minima" />
+            <TableColumn fx:id="tviewColPartUnitQuantMax" maxWidth="259.0" minWidth="74.0" prefWidth="135.0" resizable="false" text="Quantidade Maxima" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -33,7 +34,7 @@
          <children>
             <HBox fx:id="pnEditorMode" alignment="CENTER" spacing="14.0">
                <children>
-                  <JFXButton fx:id="btnNew" buttonType="RAISED" layoutX="10.0" layoutY="10.0" onAction="#actSPNew" prefWidth="150.0" ripplerFill="#282a2f" text="Inserir produtos">
+                  <JFXButton fx:id="btnNew" buttonType="RAISED" layoutX="10.0" layoutY="10.0" onAction="#actSPNew" prefWidth="150.0" ripplerFill="#282a2f" text="Salvar Estoque">
                      <effect>
                         <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
                      </effect>
@@ -46,7 +47,7 @@
                         <String fx:value="JFXButtonCompactII" />
                      </styleClass>
                   </JFXButton>
-                  <JFXButton fx:id="btnNew1" buttonType="RAISED" layoutX="234.0" layoutY="10.0" onAction="#actSPNew" prefWidth="150.0" ripplerFill="#282a2f" text="Retirar produtos">
+                  <JFXButton fx:id="btnDeletar" buttonType="RAISED" layoutX="234.0" layoutY="10.0" onAction="#actSPDelete" prefWidth="150.0" ripplerFill="#282a2f" text="Remover Estoque">
                      <effect>
                         <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
                      </effect>
@@ -55,7 +56,7 @@
                      </graphic>
                      <styleClass>
                         <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonAccept" />
+                        <String fx:value="JFXButtonDelete" />
                         <String fx:value="JFXButtonCompactII" />
                      </styleClass>
                   </JFXButton>
