--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLPedirProduto.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLPedirProduto.fxml
@@ -56,7 +56,7 @@
                               </FlowPane>
                               <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="5.0" maxWidth="200.0" prefWidth="148.0" vgap="5.0">
                                  <children>
-                                    <JFXButton fx:id="btbusca" buttonType="RAISED" minHeight="33.0" minWidth="53.0" prefHeight="33.0" prefWidth="53.0" ripplerFill="#282a2f" style="-fx-text-fill: white;" text="Buscar">
+                                    <JFXButton fx:id="btbusca" buttonType="RAISED" minHeight="33.0" minWidth="53.0" onAction="#buscarpedido" prefHeight="33.0" prefWidth="53.0" ripplerFill="#282a2f" style="-fx-text-fill: white;" text="Buscar">
                                        <styleClass>
                                           <String fx:value="JFXButtonCompact" />
                                           <String fx:value="JFXButtonDefault" />
@@ -79,22 +79,23 @@
                                  <children>
                                     <VBox alignment="CENTER" maxWidth="1000.0" spacing="10.0" HBox.hgrow="ALWAYS">
                                        <children>
-                                          <VBox minHeight="250.0" spacing="10.0" style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
+                                          <VBox fx:id="vboxprodutos" minHeight="250.0" spacing="10.0" style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
                                              <children>
                                                 <Label text="Produtos" />
                                                 <VBox spacing="10.0" VBox.vgrow="ALWAYS">
                                                    <children>
                                                       <TableView fx:id="tviewProducts" editable="true" prefHeight="214.0" prefWidth="690.0">
                                                         <columns>
-                                                          <TableColumn fx:id="colproduto" minWidth="-1.0" prefWidth="297.0" text="Produto" />
-                                                            <TableColumn fx:id="colqtd" minWidth="-1.0" prefWidth="99.0" text="Qtde. Estoque" />
-                                                            <TableColumn fx:id="colqtdpedido" minWidth="-1.0" prefWidth="98.0" text="Qtde. Pedido" />
-                                                          <TableColumn fx:id="colvalor" minWidth="-1.0" prefWidth="98.0" text="Valor" />
-                                                            <TableColumn fx:id="coltotal" maxWidth="500.0" minWidth="-1.0" prefWidth="95.0" text="Valor Total" />
+                                                          <TableColumn fx:id="colproduto" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="150.0" text="Produto" />
+                                                            <TableColumn fx:id="colfornecedor" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="150.0" text="Fornecedor" />
+                                                            <TableColumn fx:id="colqtd" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="90.0" text="Qtde. Estoque" />
+                                                            <TableColumn fx:id="colqtdpedido" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="90.0" text="Qtde. Pedido" />
+                                                          <TableColumn fx:id="colvalor" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Valor" />
+                                                            <TableColumn fx:id="coltotal" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="110.0" text="Valor Total" />
                                                         </columns>
                                                       </TableView>
                                                       <HBox alignment="CENTER_RIGHT" spacing="15.0" />
-                                                      <HBox alignment="CENTER_RIGHT" layoutX="10.0" layoutY="234.0" spacing="15.0">
+                                                      <HBox alignment="CENTER_RIGHT" spacing="15.0">
                                                          <children>
                                                             <JFXButton fx:id="btadd1" buttonType="RAISED" minHeight="35.0" minWidth="100.0" onAction="#addproduto" prefWidth="100.0" ripplerFill="#282a2f" style="-fx-background-color: green; -fx-text-fill: white;" text="Adicionar">
                                                                <graphic>
@@ -196,7 +197,8 @@
                   </JFXTabPane>
                   <HBox alignment="CENTER" spacing="15.0">
                      <children>
-                        <JFXButton buttonType="RAISED" layoutX="250.0" layoutY="10.0" minHeight="50.0" minWidth="80.0" onAction="#salvarpedido" ripplerFill="#282a2f" style="-fx-text-fill: white;" styleClass="JFXButtonDefault" text="Salvar" />
+                        <JFXButton fx:id="btsalvar" buttonType="RAISED" minHeight="50.0" minWidth="80.0" onAction="#salvarpedido" ripplerFill="#282a2f" style="-fx-text-fill: white;" styleClass="JFXButtonDefault" text="Salvar" />
+                        <JFXButton fx:id="btautorizar" buttonType="RAISED" layoutX="298.0" layoutY="10.0" minHeight="50.0" minWidth="80.0" onAction="#autorizarpedido" ripplerFill="#282a2f" style="-fx-text-fill: white;" styleClass="JFXButtonDefault" text="Autorizar" />
                         <JFXButton buttonType="RAISED" minHeight="50.0" minWidth="80.0" onAction="#voltar" ripplerFill="#282a2f" style="-fx-background-color: orange; -fx-text-fill: white;" text="Cancelar" />
                      </children>
                   </HBox>
