--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLPedidoBusca.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLPedidoBusca.fxml
@@ -39,10 +39,9 @@
       <TableView fx:id="tviewSearch" prefHeight="200.0" VBox.vgrow="ALWAYS">
          <columns>
             <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="50.0" prefWidth="60.0" text="ID" />
-            <TableColumn fx:id="tviewColProd" editable="false" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Produto" />
-            <TableColumn fx:id="tviewColFornecedor" maxWidth="150.0" minWidth="150.0" prefWidth="-1.0" resizable="false" text="Fornecedor" />
-            <TableColumn fx:id="tviewColData" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Data" />
-            <TableColumn fx:id="tviewColAutorizado" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="-1.0" text="Autorizado" />
+            <TableColumn fx:id="tviewColProd" editable="false" maxWidth="320.0" minWidth="150.0" prefWidth="215.0" text="Pedido" />
+            <TableColumn fx:id="tviewColData" maxWidth="120.0" minWidth="108.0" prefWidth="211.0" text="Data" />
+            <TableColumn fx:id="tviewColAutorizado" maxWidth="200.0" minWidth="150.0" prefWidth="185.0" text="Autorizado" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
