--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLMenuPrincipal.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLMenuPrincipal.fxml
@@ -3,115 +3,120 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="rootPane" minHeight="700.0" minWidth="980.0" style="-fx-background-color: white;" stylesheets="@FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.controller.FXMLDworHomeController">
-   <center>
-      <VBox fx:id="mainAreaContainer" alignment="CENTER" prefHeight="610.0" prefWidth="796.0" BorderPane.alignment="CENTER">
-         <padding>
-            <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-         </padding></VBox>
-   </center>
-   <top>
-      <HBox maxHeight="92.0" prefHeight="92.0" prefWidth="1065.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="5.0" left="7.0" right="7.0" top="5.0" />
-         </BorderPane.margin>
-         <styleClass>
-            <String fx:value="DWORStatusBar" />
-            <String fx:value="DWORDefaultPaneBackground" />
-         </styleClass>
+<VBox minHeight="700.0" minWidth="950.0" prefHeight="700.0" spacing="5.0" stylesheets="@FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.FXMLMenuHomeController">
+	<children>
+      <StackPane fx:id="menuAreaContainer">
+         <VBox.margin>
+            <Insets bottom="5.0" />
+         </VBox.margin>
          <children>
-            <JFXButton id="NavigationMenuButton" text="Aluno" textAlignment="CENTER" wrapText="true">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="DWORNavigationMenu" />
-                  <String fx:value="DWORNavigationMenuButton" />
-               </styleClass>
-            </JFXButton>
-            <JFXButton id="NavigationMenuButton" text="Turma">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="DWORNavigationMenu" />
-                  <String fx:value="DWORNavigationMenuButton" />
-               </styleClass>
-            </JFXButton>
-            <JFXButton id="NavigationMenuButton" fx:id="btnSidebarContacts" onAction="#actManageContacts" text="Turma Personalizada">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="DWORNavigationMenu" />
-                  <String fx:value="DWORNavigationMenuButton" />
-               </styleClass>
-            </JFXButton>
-            <JFXButton id="NavigationMenuButton" fx:id="btnSidebarEquipments" onAction="#actManageEquipments" text="Equipamentos">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="DWORNavigationMenu" />
-                  <String fx:value="DWORNavigationMenuButton" />
-               </styleClass>
-            </JFXButton>
-            <JFXButton id="NavigationMenuButton" text="Calendario">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="DWORNavigationMenu" />
-                  <String fx:value="DWORNavigationMenuButton" />
-               </styleClass>
-            </JFXButton>
-            <JFXButton id="NavigationMenuButton" fx:id="btnSidebarWorkOrders" onAction="#actManageWorkOrders" text="Relatorios">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="DWORNavigationMenu" />
-                  <String fx:value="DWORNavigationMenuButton" />
-               </styleClass>
-            </JFXButton>
-         </children></HBox>
-   </top>
-   <bottom>
-      <VBox prefHeight="58.0" prefWidth="1079.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox maxHeight="92.0" prefHeight="53.0" prefWidth="1079.0">
-               <styleClass>
-                  <String fx:value="DWORStatusBar" />
-                  <String fx:value="DWORDefaultPaneBackground" />
-               </styleClass>
-               <children>
-                  <JFXButton id="NavigationMenuButton" fx:id="btnSidebarExit" onAction="#actExit" text="Sair">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                     <styleClass>
-                        <String fx:value="DWORNavigationMenu" />
-                        <String fx:value="DWORNavigationMenuButton" />
-                     </styleClass>
-                  </JFXButton>
-                  <JFXButton id="NavigationMenuButton" fx:id="btnSidebarConfigs" onAction="#actConfigure" text="Configurações">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                     <styleClass>
-                        <String fx:value="DWORNavigationMenu" />
-                        <String fx:value="JFXButtonNeutral" />
-                        <String fx:value="DWORNavigationMenuButton" />
-                     </styleClass>
-                  </JFXButton>
-               </children>
-            </HBox>
+      		<HBox maxHeight="92.0">
+      			<styleClass>
+      				<String fx:value="DWORStatusBar" />
+      				<String fx:value="DWORDefaultPaneBackground" />
+      			</styleClass>
+      			<children>
+      				<JFXButton id="NavigationMenuButton" fx:id="btnAlunos" maxWidth="1.7976931348623157E308" onAction="#actAlunos" text="Aluno" textAlignment="CENTER" wrapText="true" HBox.hgrow="ALWAYS">
+      					<font>
+      						<Font name="System Bold" size="13.0" />
+      					</font>
+      					<styleClass>
+      						<String fx:value="DWORNavigationMenu" />
+      						<String fx:value="DWORNavigationMenuButton" />
+      					</styleClass>
+      				</JFXButton>
+      				<JFXButton id="NavigationMenuButton" maxWidth="1.7976931348623157E308" text="Gerais" HBox.hgrow="ALWAYS">
+      					<font>
+      						<Font name="System Bold" size="13.0" />
+      					</font>
+      					<styleClass>
+      						<String fx:value="DWORNavigationMenu" />
+      						<String fx:value="DWORNavigationMenuButton" />
+      					</styleClass>
+      				</JFXButton>
+      				<JFXButton id="NavigationMenuButton" fx:id="btnSidebarContacts" maxWidth="1.7976931348623157E308" onAction="#actManageContacts" text="Turma Personalizada" HBox.hgrow="ALWAYS">
+      					<font>
+      						<Font name="System Bold" size="13.0" />
+      					</font>
+      					<styleClass>
+      						<String fx:value="DWORNavigationMenu" />
+      						<String fx:value="DWORNavigationMenuButton" />
+      					</styleClass>
+      				</JFXButton>
+      				<JFXButton id="NavigationMenuButton" fx:id="btnSidebarEquipments" maxWidth="1.7976931348623157E308" onAction="#actGerenciarProdutos" text="Produtos" HBox.hgrow="ALWAYS">
+      					<font>
+      						<Font name="System Bold" size="13.0" />
+      					</font>
+      					<styleClass>
+      						<String fx:value="DWORNavigationMenu" />
+      						<String fx:value="DWORNavigationMenuButton" />
+      					</styleClass>
+      				</JFXButton>
+      				<JFXButton id="NavigationMenuButton" maxWidth="1.7976931348623157E308" text="Calendario" HBox.hgrow="ALWAYS">
+      					<font>
+      						<Font name="System Bold" size="13.0" />
+      					</font>
+      					<styleClass>
+      						<String fx:value="DWORNavigationMenu" />
+      						<String fx:value="DWORNavigationMenuButton" />
+      					</styleClass>
+      				</JFXButton>
+      				<JFXButton id="NavigationMenuButton" fx:id="btnSidebarWorkOrders" maxWidth="1.7976931348623157E308" onAction="#actManageWorkOrders" text="Relatorios" HBox.hgrow="ALWAYS">
+      					<font>
+      						<Font name="System Bold" size="13.0" />
+      					</font>
+      					<styleClass>
+      						<String fx:value="DWORNavigationMenu" />
+      						<String fx:value="DWORNavigationMenuButton" />
+      					</styleClass>
+      				</JFXButton>
+      			</children>
+      		</HBox>
          </children>
-      </VBox>
-   </bottom>
-</BorderPane>
+      </StackPane>
+		<StackPane fx:id="mainAreaContainer" prefHeight="600.0" VBox.vgrow="ALWAYS">
+			<VBox.margin>
+				<Insets />
+			</VBox.margin>
+         <children>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" />
+         </children>
+		</StackPane>
+		<HBox maxHeight="92.0">
+		<styleClass>
+		<String fx:value="DWORStatusBar" />
+		<String fx:value="DWORDefaultPaneBackground" />
+		</styleClass>
+		<children>
+		<JFXButton id="NavigationMenuButton" fx:id="btnSidebarExit" onAction="#actExit" text="Sair">
+		<font>
+		<Font name="System Bold" size="13.0" />
+		</font>
+		<styleClass>
+		<String fx:value="DWORNavigationMenu" />
+		<String fx:value="DWORNavigationMenuButton" />
+		</styleClass>
+		</JFXButton>
+		<JFXButton id="NavigationMenuButton" fx:id="btnSidebarConfigs" onAction="#actConfigure" text="Configurações">
+		<font>
+		<Font name="System Bold" size="13.0" />
+		</font>
+		<styleClass>
+		<String fx:value="DWORNavigationMenu" />
+		<String fx:value="JFXButtonNeutral" />
+		<String fx:value="DWORNavigationMenuButton" />
+		</styleClass>
+		</JFXButton>
+		</children>
+		<VBox.margin>
+		<Insets />
+		</VBox.margin>
+		</HBox>
+	</children>
+</VBox>
