--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLProductSaidaForm.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLProductSaidaForm.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="rootPane" prefHeight="158.0" prefWidth="406.0" spacing="30.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLProductSaidaFormController">
+<VBox fx:id="rootPane" prefHeight="329.0" prefWidth="500.0" spacing="30.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLProductSaidaFormController">
    <children>
       <HBox spacing="15.0">
          <children>
@@ -15,10 +19,10 @@
                   <JFXTextField fx:id="tfieldInternalCod" prefWidth="100.0" />
                </children>
             </VBox>
-            <VBox spacing="10.0" HBox.hgrow="ALWAYS">
+            <VBox prefHeight="52.0" prefWidth="400.0" spacing="10.0" HBox.hgrow="ALWAYS">
                <children>
                   <Label text="Descriçao do  Produto" />
-                  <JFXTextField fx:id="tfieldDescription" prefWidth="245.0" promptText="Descrição simplificada da Produto" />
+                  <JFXTextField fx:id="tfieldDescription" maxWidth="350.0" promptText="Descrição simplificada da Produto" />
                </children>
             </VBox>
          </children>
@@ -43,6 +47,23 @@
                   <JFXTextField fx:id="tfieldMinQtd" prefWidth="150.0" />
                </children>
             </VBox>
+         </children>
+      </HBox>
+      <HBox spacing="15.0">
+         <children>
+            <TableView prefHeight="150.0" prefWidth="450.0">
+               <columns>
+                  <TableColumn maxWidth="-1.0" minWidth="449.0" prefWidth="449.0" text="Fornecedor" />
+               </columns>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </TableView>
+            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="Button">
+               <HBox.margin>
+                  <Insets right="5.0" top="50.0" />
+               </HBox.margin>
+            </Button>
          </children>
       </HBox>
    </children>
