--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLMenuPrincipal.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLMenuPrincipal.fxml
@@ -31,7 +31,7 @@
       						<String fx:value="DWORNavigationMenuButton" />
       					</styleClass>
       				</JFXButton>
-      				<JFXButton id="NavigationMenuButton" maxWidth="1.7976931348623157E308" text="Gerais" HBox.hgrow="ALWAYS">
+      				<JFXButton id="NavigationMenuButton" fx:id="btnGerais" maxWidth="1.7976931348623157E308" onAction="#actGerais" text="Gerais" HBox.hgrow="ALWAYS">
       					<font>
       						<Font name="System Bold" size="13.0" />
       					</font>
