--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLAddressForm.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLAddressForm.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="rootPane" spacing="17.0" stylesheets="@../../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dwor.view.component.contact.FXMLAddressFormController">
+<VBox fx:id="rootPane" spacing="17.0" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLAddressFormController">
    <children>
       <HBox spacing="14.0">
          <children>
@@ -60,7 +60,7 @@
       <HBox />
       <HBox spacing="14.0">
          <children>
-            <JFXComboBox fx:id="cmbboxProvinceState" labelFloat="true" maxWidth="1.7976931348623157E308" onAction="#actSelectProvinceState" prefWidth="265.0" promptText="selecione o estado" HBox.hgrow="ALWAYS" />
+            <JFXComboBox fx:id="cmbboxProvinceState" labelFloat="true" maxWidth="1.7976931348623157E308" prefWidth="265.0" promptText="selecione o estado" HBox.hgrow="ALWAYS" />
             <JFXComboBox fx:id="cmbboxCity" labelFloat="true" maxWidth="1.7976931348623157E308" prefWidth="265.0" promptText="selecione a cidade" HBox.hgrow="ALWAYS" />
          </children>
       </HBox>
