--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLContactRegistration.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLContactRegistration.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dwor.view.component.contact.FXMLContactRegistrationController">
+<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLContactRegistrationController">
 	<children>
-		<VBox fx:id="primaryPane" alignment="TOP_CENTER" minWidth="0.0" spacing="5.0" styleClass="DWORDefaultFormBackground" stylesheets="@../../FXMLStylesheet.css">
+		<VBox fx:id="primaryPane" alignment="TOP_CENTER" minWidth="0.0" spacing="5.0" styleClass="DWORDefaultFormBackground">
 			<children>
             <HBox maxWidth="600.0">
                <children>
