--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLContactSearch.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLContactSearch.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dwor.view.component.contact.FXMLContactSearchController">
+<StackPane fx:id="rootPane" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLContactSearchController">
    <children>
-      <VBox fx:id="primaryPane" minHeight="620.0" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../../FXMLStylesheet.css">
+      <VBox fx:id="primaryPane" minHeight="620.0" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground">
          <children>
             <Label styleClass="DWORScreenTitleII" text="Busca de Contatos" />
             <HBox alignment="CENTER" spacing="15.0">
