--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLInteressadosRegistration.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLInteressadosRegistration.fxml
@@ -10,16 +10,12 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLInteressadoRegistrationController">
    <children>
       <VBox fx:id="primaryPane" spacing="25.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css">
       	<children>
       		<Label styleClass="DWORScreenTitleII" text="Cadastro de Interessados" />
-            <VBox layoutX="25.0" layoutY="71.0">
-               <children>
-                  <fx:include source="FXMLInteressadosForm.fxml" />
-               </children>
-            </VBox>
+            <fx:include fx:id="pnInteressadosForm" source="FXMLInteressadosForm.fxml" />
       		<VBox VBox.vgrow="ALWAYS" />
       		<HBox fx:id="pnButtons" alignment="CENTER" spacing="14.0">
       			<children>
