--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLInteressadosSearch.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLInteressadosSearch.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="rootPane" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="rootPane" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLInteressadosSearchController">
    <children>
       <Label styleClass="DWORScreenTitleII" text="Busca de Interessadoss" />
       <HBox alignment="CENTER" spacing="15.0">
@@ -38,9 +38,10 @@
       </HBox>
       <TableView fx:id="tviewSearch" prefHeight="200.0" VBox.vgrow="ALWAYS">
          <columns>
-            <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="200.0" prefWidth="60.0" text="Responsavel" />
-            <TableColumn fx:id="tviewColProductDescription" editable="false" maxWidth="1.7976931348623157E308" minWidth="310.0" prefWidth="-1.0" resizable="false" text="Motivo" />
-         	<TableColumn fx:id="tviewColPartUnitQuant" editable="false" maxWidth="150.0" minWidth="150.0" prefWidth="-1.0" resizable="false" text="Data" />
+            <TableColumn fx:id="tviewColNome" editable="false" maxWidth="-1.0" minWidth="200.0" prefWidth="60.0" text="Responsavel" />
+            <TableColumn fx:id="tviewColTelefone" editable="false" maxWidth="1.7976931348623157E308" minWidth="183.0" prefWidth="184.0" resizable="false" text="Telefone" />
+            <TableColumn fx:id="tviewColMotivo" editable="false" maxWidth="1.7976931348623157E308" minWidth="183.0" prefWidth="299.0" resizable="false" text="Motivo" />
+         	<TableColumn fx:id="tviewColData" editable="false" maxWidth="277.0" minWidth="150.0" prefWidth="160.0" resizable="false" text="Data" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
