--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLRestricao.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLRestricao.fxml
@@ -48,7 +48,7 @@
                                                 <Insets />
                                              </FlowPane.margin>
                                           </JFXTextField>
-                                          <JFXTextField id="tfieldName" fx:id="tfieldSala" labelFloat="true" minWidth="150.0" prefHeight="26.0" promptText="Sala">
+                                          <JFXTextField id="tfieldName" fx:id="tfieldMatricula" labelFloat="true" minWidth="150.0" prefHeight="26.0" promptText="Matricula">
                                              <styleClass>
                                                 <String fx:value="jfxtextfieldform" />
                                                 <String fx:value="formMaxWidth" />
@@ -122,9 +122,9 @@
                                                             </HBox>
                                                             <TableView fx:id="tviewAlimento" editable="true" minWidth="600.0" prefHeight="100.0">
                                                               <columns>
-                                                                <TableColumn fx:id="colproduto" maxWidth="1.7976931348623157E308" minWidth="350.0" prefWidth="-1.0" text="Alimento" />
-                                                                  <TableColumn fx:id="colqtd" maxWidth="-1.0" minWidth="145.0" prefWidth="-1.0" text="Gravidade" />
-                                                                  <TableColumn fx:id="colqtdpedido" maxWidth="-1.0" minWidth="145.0" prefWidth="-1.0" text="Periodo" />
+                                                                <TableColumn fx:id="colAlimento" maxWidth="1.7976931348623157E308" minWidth="350.0" prefWidth="-1.0" text="Alimento" />
+                                                                  <TableColumn fx:id="colGravidadeAlimento" maxWidth="-1.0" minWidth="145.0" prefWidth="-1.0" text="Gravidade" />
+                                                                  <TableColumn fx:id="colperiodoalimento" maxWidth="-1.0" minWidth="145.0" prefWidth="-1.0" text="Periodo" />
                                                               </columns>
                                                             </TableView>
                                                             <HBox alignment="CENTER_RIGHT" spacing="15.0" />
