--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLSalaMultiUso.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLSalaMultiUso.fxml
@@ -90,8 +90,8 @@
                                        <children>
                                           <TableView fx:id="tviewTurma" editable="true" prefHeight="200.0" prefWidth="200.0">
                                              <columns>
-                                                <TableColumn fx:id="colAluno" minWidth="350.0" prefWidth="-1.0" text="Turma" />
-                                                <TableColumn fx:id="colturma" minWidth="320.0" prefWidth="-1.0" text="Responsavel Turma" />
+                                                <TableColumn fx:id="colTurma" minWidth="350.0" prefWidth="-1.0" text="Turma" />
+                                                <TableColumn fx:id="colResponsavel" minWidth="320.0" prefWidth="-1.0" text="Responsavel Turma" />
                                              </columns>
                                           </TableView>
                                           <HBox alignment="CENTER_RIGHT" spacing="15.0">
