--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLDocumento.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLDocumento.fxml
@@ -101,21 +101,17 @@
                                                 <TableColumn fx:id="colpasta" minWidth="120.0" prefWidth="-1.0" text="Pasta" />
                                              </columns>
                                           </TableView>
-                                          <HBox alignment="CENTER" spacing="15.0" style="-fx-border-color: lightgrey;" VBox.vgrow="ALWAYS">
+                                          <HBox fx:id="Hdoc" alignment="CENTER" spacing="15.0" style="-fx-border-color: lightgrey;" VBox.vgrow="ALWAYS">
                                              <children>
                                                 <FlowPane hgap="15.0" vgap="20.0" HBox.hgrow="ALWAYS">
                                                    <children>
-                                                      <JFXTextField id="tfieldName" fx:id="txtdocumento" editable="false" labelFloat="true" minWidth="275.0" opacity="0.88" prefHeight="26.0" promptText="Documento">
-                                                         <styleClass>
-                                                            <String fx:value="jfxtextfieldform" />
-                                                            <String fx:value="formMaxWidth" />
-                                                         </styleClass>
+                                                      <JFXTextField fx:id="txtdocumento" labelFloat="true" minWidth="275.0" opacity="0.88" prefHeight="26.0" promptText="Documento">
                                                          <FlowPane.margin>
                                                             <Insets />
                                                          </FlowPane.margin>
                                                       </JFXTextField>
-                                                      <JFXTextField id="tfieldCPFCNPJ" fx:id="txtpasta" editable="false" labelFloat="true" minWidth="154.0" opacity="0.88" prefHeight="25.0" promptText="Pasta" styleClass="formMaxWidth" />
-                                                      <JFXTextField id="tfieldCPFCNPJ" fx:id="txtsala" editable="false" labelFloat="true" minWidth="154.0" opacity="0.88" prefHeight="25.0" promptText="Sala" styleClass="formMaxWidth" />
+                                                      <JFXTextField fx:id="txtpasta" labelFloat="true" minWidth="154.0" opacity="0.88" prefHeight="25.0" promptText="Pasta" />
+                                                      <JFXTextField fx:id="txtsala" labelFloat="true" minWidth="154.0" opacity="0.88" prefHeight="25.0" promptText="Sala" />
                                                    </children>
                                                    <padding>
                                                       <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
