--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLRestricao.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLRestricao.fxml
@@ -39,7 +39,7 @@
                                  <children>
                                     <FlowPane hgap="15.0" vgap="20.0" HBox.hgrow="SOMETIMES">
                                        <children>
-                                          <JFXTextField id="tfieldName" fx:id="tfieldnome" labelFloat="true" minWidth="275.0" prefHeight="26.0" promptText="Aluno">
+                                          <JFXTextField id="tfieldName" fx:id="tfieldnome" disable="true" labelFloat="true" minWidth="275.0" prefHeight="26.0" promptText="Aluno">
                                              <styleClass>
                                                 <String fx:value="jfxtextfieldform" />
                                                 <String fx:value="formMaxWidth" />
@@ -48,18 +48,24 @@
                                                 <Insets />
                                              </FlowPane.margin>
                                           </JFXTextField>
-                                          <JFXTextField id="tfieldName" fx:id="tfieldMatricula" labelFloat="true" minWidth="150.0" prefHeight="26.0" promptText="Matricula">
+                                          <JFXTextField id="tfieldName" fx:id="tfieldMatricula" disable="true" labelFloat="true" minWidth="150.0" prefHeight="26.0" promptText="Matricula">
                                              <styleClass>
                                                 <String fx:value="jfxtextfieldform" />
                                                 <String fx:value="formMaxWidth" />
                                              </styleClass>
                                           </JFXTextField>
-                                          <JFXTextField id="tfieldName" fx:id="tfieldTurma" labelFloat="true" minWidth="150.0" prefHeight="26.0" promptText="Turma">
+                                          <JFXTextField id="tfieldName" fx:id="tfieldTurma" disable="true" labelFloat="true" minWidth="150.0" prefHeight="26.0" promptText="Turma">
                                              <styleClass>
                                                 <String fx:value="jfxtextfieldform" />
                                                 <String fx:value="formMaxWidth" />
                                              </styleClass>
                                           </JFXTextField>
+                                          <JFXButton fx:id="btBuscarAluno" accessibleText="Ver Cadastro" buttonType="RAISED" minHeight="50.0" minWidth="70.0" onAction="#buscar" ripplerFill="#282a2f" text="Buscar">
+                                             <styleClass>
+                                                <String fx:value="JFXButtonCompact" />
+                                                <String fx:value="JFXButtonDefault" />
+                                             </styleClass>
+                                          </JFXButton>
                                        </children>
                                        <padding>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
@@ -87,7 +93,7 @@
                                                    <children>
                                                       <VBox spacing="10.0" VBox.vgrow="ALWAYS">
                                                          <children>
-                                                            <HBox alignment="CENTER" spacing="15.0" style="-fx-border-color: lightgrey;" VBox.vgrow="ALWAYS">
+                                                            <HBox fx:id="Hali" alignment="CENTER" spacing="15.0" style="-fx-border-color: lightgrey;" VBox.vgrow="ALWAYS">
                                                                <children>
                                                                   <FlowPane hgap="15.0" vgap="20.0" HBox.hgrow="ALWAYS">
                                                                      <padding>
@@ -182,7 +188,7 @@
                                                    <children>
                                                       <VBox spacing="10.0" VBox.vgrow="ALWAYS">
                                                          <children>
-                                                            <HBox alignment="CENTER" spacing="15.0" style="-fx-border-color: lightgrey;" VBox.vgrow="ALWAYS">
+                                                            <HBox fx:id="Hrem" alignment="CENTER" spacing="15.0" style="-fx-border-color: lightgrey;" VBox.vgrow="ALWAYS">
                                                                <children>
                                                                   <FlowPane hgap="15.0" vgap="20.0" HBox.hgrow="ALWAYS">
                                                                      <padding>
