--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLAlunoBuscaBase.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLAlunoBuscaBase.fxml
@@ -11,91 +11,86 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
 
-<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLAlunoSearchController">
+<VBox fx:id="rootPane" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLAlunoSearchController">
    <children>
-      <VBox id="pnSearch" fx:id="pnSearch" spacing="14.0" styleClass="parent" stylesheets="@../FXMLStylesheet.css">
+      <Label styleClass="DWORScreenTitleII" text="Busca de Aluno" />
+      <FlowPane hgap="15.0" vgap="10.0">
          <children>
-            <Label styleClass="DWORScreenTitleII" text="Busca de Aluno" />
-            <FlowPane hgap="15.0" vgap="10.0">
-               <children>
-                  <JFXTextField fx:id="tfieldNome" labelFloat="true" maxWidth="200.0" onAction="#actSPSearch" prefHeight="30.0" prefWidth="202.0" promptText="Nome" />
-                  <JFXTextField fx:id="tfieldcpf" labelFloat="true" maxWidth="200.0" onAction="#actSPSearch" prefHeight="30.0" prefWidth="202.0" promptText="CPF/CNPJ" />
-                  <JFXTextField fx:id="tfieldNumero" labelFloat="true" maxWidth="200.0" onAction="#actSPSearch" prefHeight="30.0" prefWidth="202.0" promptText="Numero Matricula" />
-                  <JFXButton fx:id="btnSPSearch" buttonType="RAISED" onAction="#actSPSearch" prefHeight="45.0" ripplerFill="#282a2f" text="Busca">
-                     <effect>
-                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-                     </effect>
-                     <styleClass>
-                        <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonCompact" />
-                     </styleClass>
-                  </JFXButton>
-               </children>
-            </FlowPane>
-            <TableView fx:id="tviewPessoas" VBox.vgrow="ALWAYS">
-               <columns>
-                  <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="35.0" prefWidth="60.0" text="ID" />
-                  <TableColumn fx:id="tviewColName" editable="false" maxWidth="1.7976931348623157E308" minWidth="60.0" prefWidth="-1.0" text="Nome" />
-                  <TableColumn fx:id="tviewColCPF" maxWidth="-1.0" minWidth="120.0" prefWidth="180.0" text="CPF" />
-                  <TableColumn fx:id="tviewColNumero" maxWidth="-1.0" minWidth="150.0" prefWidth="180.0" text="NumeroMatricula" />
-               </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-            <HBox fx:id="pnSelectorMode" alignment="CENTER" spacing="14.0">
-               <children>
-                  <JFXButton fx:id="btnSelect" buttonType="RAISED" layoutX="10.0" layoutY="10.0" onAction="#actSelectItem" prefWidth="150.0" ripplerFill="#282a2f" text="Selecionar">
-                     <effect>
-                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-                     </effect>
-                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="CHECK_SQUARE_ALT" size="20" text="" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonCompactII" />
-                     </styleClass>
-                  </JFXButton>
-                  <JFXButton fx:id="btnSPDelete" buttonType="RAISED" onAction="#actSPDelete" prefWidth="150.0" ripplerFill="#282a2f" text="Deletar">
-                     <effect>
-                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-                     </effect>
-                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="TRASH_ALT" size="20" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonDelete" />
-                        <String fx:value="JFXButtonCompactII" />
-                     </styleClass>
-                  </JFXButton>
-                  <JFXButton fx:id="btnCancel" buttonType="RAISED" onAction="#actCancel" prefWidth="150.0" ripplerFill="#282a2f" text="Cancelar">
-                     <effect>
-                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-                     </effect>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="REPLY" size="20" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonCancel" />
-                        <String fx:value="JFXButtonCompactII" />
-                     </styleClass>
-                  </JFXButton>
-               </children>
-            </HBox>
+            <JFXTextField fx:id="tfieldNome" labelFloat="true" maxWidth="200.0" onAction="#actSPSearch" prefHeight="30.0" prefWidth="202.0" promptText="Nome" />
+            <JFXTextField fx:id="tfieldcpf" labelFloat="true" maxWidth="200.0" onAction="#actSPSearch" prefHeight="30.0" prefWidth="202.0" promptText="CPF/CNPJ" />
+            <JFXTextField fx:id="tfieldNumero" labelFloat="true" maxWidth="200.0" onAction="#actSPSearch" prefHeight="30.0" prefWidth="202.0" promptText="Numero Matricula" />
+            <JFXButton fx:id="btnSPSearch" buttonType="RAISED" onAction="#actSPSearch" prefHeight="45.0" ripplerFill="#282a2f" text="Busca">
+               <effect>
+                  <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+               </effect>
+               <styleClass>
+                  <String fx:value="JFXButtonDefault" />
+                  <String fx:value="JFXButtonCompact" />
+               </styleClass>
+            </JFXButton>
          </children>
-         <padding>
-            <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
-         </padding>
-      </VBox>
+      </FlowPane>
+      <TableView fx:id="tviewPessoas" prefWidth="200.0" VBox.vgrow="ALWAYS">
+         <columns>
+            <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="35.0" prefWidth="60.0" text="ID" />
+            <TableColumn fx:id="tviewColName" editable="false" maxWidth="1.7976931348623157E308" minWidth="60.0" prefWidth="-1.0" text="Nome" />
+            <TableColumn fx:id="tviewColCPF" maxWidth="-1.0" minWidth="120.0" prefWidth="180.0" text="CPF" />
+            <TableColumn fx:id="tviewColNumero" maxWidth="-1.0" minWidth="150.0" prefWidth="180.0" text="NumeroMatricula" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <HBox fx:id="pnSelectorMode" alignment="CENTER" spacing="14.0">
+         <children>
+            <JFXButton fx:id="btnSelect" buttonType="RAISED" layoutX="10.0" layoutY="10.0" onAction="#actSelectItem" prefWidth="150.0" ripplerFill="#282a2f" text="Selecionar">
+               <effect>
+                  <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+               </effect>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="CHECK_SQUARE_ALT" size="20" text="" />
+               </graphic>
+               <styleClass>
+                  <String fx:value="JFXButtonDefault" />
+                  <String fx:value="JFXButtonCompactII" />
+               </styleClass>
+            </JFXButton>
+            <JFXButton fx:id="btnSPDelete" buttonType="RAISED" onAction="#actSPDelete" prefWidth="150.0" ripplerFill="#282a2f" text="Deletar">
+               <effect>
+                  <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+               </effect>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="TRASH_ALT" size="20" />
+               </graphic>
+               <styleClass>
+                  <String fx:value="JFXButtonDefault" />
+                  <String fx:value="JFXButtonDelete" />
+                  <String fx:value="JFXButtonCompactII" />
+               </styleClass>
+            </JFXButton>
+            <JFXButton fx:id="btnCancel" buttonType="RAISED" onAction="#actCancel" prefWidth="150.0" ripplerFill="#282a2f" text="Cancelar">
+               <effect>
+                  <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+               </effect>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="REPLY" size="20" />
+               </graphic>
+               <styleClass>
+                  <String fx:value="JFXButtonDefault" />
+                  <String fx:value="JFXButtonCancel" />
+                  <String fx:value="JFXButtonCompactII" />
+               </styleClass>
+            </JFXButton>
+         </children>
+      </HBox>
    </children>
-</StackPane>
+   <padding>
+      <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
+   </padding>
+</VBox>
