--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLFornecedorSearch.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLFornecedorSearch.fxml
@@ -10,161 +10,167 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="rootPane" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLFornecedorSearchController">
+
+<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLFornecedorSearchController">
    <children>
-      <Label styleClass="DWORScreenTitleII" text="Busca de Fornecedor" />
-      <HBox alignment="CENTER" spacing="15.0">
+      <VBox minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css">
          <children>
-            <JFXTextField fx:id="tfieldSearch" labelFloat="true" onAction="#actSPSearch" prefHeight="30.0" promptText="Insira o termo de busca" HBox.hgrow="ALWAYS">
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-            </JFXTextField>
-            <JFXButton fx:id="btnSearch" buttonType="RAISED" onAction="#actSPSearch" prefHeight="45.0" ripplerFill="#282a2f" text="Busca">
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-               <effect>
-                  <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-               </effect>
-               <styleClass>
-                  <String fx:value="JFXButtonDefault" />
-                  <String fx:value="JFXButtonCompact" />
-               </styleClass>
-            </JFXButton>
-         </children>
-      </HBox>
-      <TableView fx:id="tviewSearch" prefHeight="200.0" VBox.vgrow="ALWAYS">
-         <columns>
-            <TableColumn fx:id="tviewColID" editable="false" maxWidth="661.0" minWidth="200.0" prefWidth="661.0" text="Forrnecedor" />
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <VBox fx:id="pnButtons">
-         <VBox.margin>
-            <Insets />
-         </VBox.margin>
-         <children>
-            <HBox fx:id="pnEditorMode" alignment="CENTER" spacing="14.0">
+            <Label styleClass="DWORScreenTitleII" text="Busca de Fornecedor" />
+            <HBox alignment="CENTER" spacing="15.0">
                <children>
-                  <JFXButton fx:id="btnNew" buttonType="RAISED" layoutX="10.0" layoutY="10.0" onAction="#actSPNew" prefWidth="150.0" ripplerFill="#282a2f" text="Novo">
-                     <effect>
-                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-                     </effect>
-                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="PLUS" size="20" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonAccept" />
-                        <String fx:value="JFXButtonCompactII" />
-                     </styleClass>
-                  </JFXButton>
-                  <JFXButton fx:id="btnEdit" buttonType="RAISED" onAction="#actSPEdit" prefWidth="150.0" ripplerFill="#282a2f" text="Editar">
-                     <effect>
-                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-                     </effect>
+                  <JFXTextField fx:id="tfieldSearch" labelFloat="true" onAction="#actSPSearch" prefHeight="30.0" promptText="Insira o termo de busca" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
-                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="20" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonCompactII" />
-                     </styleClass>
-                  </JFXButton>
-                  <JFXButton fx:id="btnDelete" buttonType="RAISED" onAction="#actSPDelete" prefWidth="150.0" ripplerFill="#282a2f" text="Deletar">
-                     <effect>
-                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-                     </effect>
+                  </JFXTextField>
+                  <JFXButton fx:id="btnSearch" buttonType="RAISED" onAction="#actSPSearch" prefHeight="45.0" ripplerFill="#282a2f" text="Busca">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
-                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="TRASH_ALT" size="20" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonDelete" />
-                        <String fx:value="JFXButtonCompactII" />
-                     </styleClass>
-                  </JFXButton>
-                  <JFXButton fx:id="btnGoBack" buttonType="RAISED" onAction="#actGoBack" prefWidth="150.0" ripplerFill="#282a2f" text="Voltar">
                      <effect>
                         <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
                      </effect>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="REPLY" size="20" />
-                     </graphic>
                      <styleClass>
                         <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonCancel" />
-                        <String fx:value="JFXButtonCompactII" />
+                        <String fx:value="JFXButtonCompact" />
                      </styleClass>
                   </JFXButton>
                </children>
             </HBox>
-            <HBox fx:id="pnSelectorMode" alignment="CENTER" layoutX="10.0" layoutY="10.0" spacing="14.0">
+            <TableView fx:id="tviewSearch" prefHeight="200.0" VBox.vgrow="ALWAYS">
+               <columns>
+                  <TableColumn fx:id="tviewColID" editable="false" maxWidth="661.0" minWidth="200.0" prefWidth="661.0" text="Forrnecedor" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+            <VBox fx:id="pnButtons">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
                <children>
-                  <JFXButton fx:id="btnSelect" buttonType="RAISED" layoutX="10.0" layoutY="10.0" onAction="#actSelectItem" prefWidth="150.0" ripplerFill="#282a2f" text="Selecionar">
-                     <effect>
-                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-                     </effect>
-                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="CHECK_SQUARE_ALT" size="20" text="" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonCompactII" />
-                     </styleClass>
-                  </JFXButton>
-                  <JFXButton fx:id="btnEdit" buttonType="RAISED" onAction="#actSelectorEdit" prefWidth="150.0" ripplerFill="#282a2f" text="Editar">
-                     <effect>
-                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-                     </effect>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="20" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonNeutral" />
-                        <String fx:value="JFXButtonCompactII" />
-                     </styleClass>
-                  </JFXButton>
-                  <JFXButton fx:id="btnCancel" buttonType="RAISED" onAction="#actCancel" prefWidth="150.0" ripplerFill="#282a2f" text="Cancelar">
-                     <effect>
-                        <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
-                     </effect>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="REPLY" size="20" />
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="JFXButtonDefault" />
-                        <String fx:value="JFXButtonCancel" />
-                        <String fx:value="JFXButtonCompactII" />
-                     </styleClass>
-                  </JFXButton>
+                  <HBox fx:id="pnEditorMode" alignment="CENTER" spacing="14.0">
+                     <children>
+                        <JFXButton fx:id="btnNew" buttonType="RAISED" layoutX="10.0" layoutY="10.0" onAction="#actSPNew" prefWidth="150.0" ripplerFill="#282a2f" text="Novo">
+                           <effect>
+                              <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+                           </effect>
+                           <graphic>
+                              <FontAwesomeIconView fill="WHITE" glyphName="PLUS" size="20" />
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="JFXButtonDefault" />
+                              <String fx:value="JFXButtonAccept" />
+                              <String fx:value="JFXButtonCompactII" />
+                           </styleClass>
+                        </JFXButton>
+                        <JFXButton fx:id="btnEdit" buttonType="RAISED" onAction="#actSPEdit" prefWidth="150.0" ripplerFill="#282a2f" text="Editar">
+                           <effect>
+                              <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+                           </effect>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                           <graphic>
+                              <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="20" />
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="JFXButtonDefault" />
+                              <String fx:value="JFXButtonCompactII" />
+                           </styleClass>
+                        </JFXButton>
+                        <JFXButton fx:id="btnDelete" buttonType="RAISED" onAction="#actSPDelete" prefWidth="150.0" ripplerFill="#282a2f" text="Deletar">
+                           <effect>
+                              <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+                           </effect>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                           <graphic>
+                              <FontAwesomeIconView fill="WHITE" glyphName="TRASH_ALT" size="20" />
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="JFXButtonDefault" />
+                              <String fx:value="JFXButtonDelete" />
+                              <String fx:value="JFXButtonCompactII" />
+                           </styleClass>
+                        </JFXButton>
+                        <JFXButton fx:id="btnGoBack" buttonType="RAISED" onAction="#actGoBack" prefWidth="150.0" ripplerFill="#282a2f" text="Voltar">
+                           <effect>
+                              <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+                           </effect>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                           <graphic>
+                              <FontAwesomeIconView fill="WHITE" glyphName="REPLY" size="20" />
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="JFXButtonDefault" />
+                              <String fx:value="JFXButtonCancel" />
+                              <String fx:value="JFXButtonCompactII" />
+                           </styleClass>
+                        </JFXButton>
+                     </children>
+                  </HBox>
+                  <HBox fx:id="pnSelectorMode" alignment="CENTER" layoutX="10.0" layoutY="10.0" spacing="14.0">
+                     <children>
+                        <JFXButton fx:id="btnSelect" buttonType="RAISED" layoutX="10.0" layoutY="10.0" onAction="#actSelectItem" prefWidth="150.0" ripplerFill="#282a2f" text="Selecionar">
+                           <effect>
+                              <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+                           </effect>
+                           <graphic>
+                              <FontAwesomeIconView fill="WHITE" glyphName="CHECK_SQUARE_ALT" size="20" text="" />
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="JFXButtonDefault" />
+                              <String fx:value="JFXButtonCompactII" />
+                           </styleClass>
+                        </JFXButton>
+                        <JFXButton fx:id="btnEdit" buttonType="RAISED" onAction="#actSelectorEdit" prefWidth="150.0" ripplerFill="#282a2f" text="Editar">
+                           <effect>
+                              <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+                           </effect>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                           <graphic>
+                              <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="20" />
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="JFXButtonDefault" />
+                              <String fx:value="JFXButtonNeutral" />
+                              <String fx:value="JFXButtonCompactII" />
+                           </styleClass>
+                        </JFXButton>
+                        <JFXButton fx:id="btnCancel" buttonType="RAISED" onAction="#actCancel" prefWidth="150.0" ripplerFill="#282a2f" text="Cancelar">
+                           <effect>
+                              <DropShadow blurType="GAUSSIAN" height="30.0" radius="14.5" width="30.0" />
+                           </effect>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                           <graphic>
+                              <FontAwesomeIconView fill="WHITE" glyphName="REPLY" size="20" />
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="JFXButtonDefault" />
+                              <String fx:value="JFXButtonCancel" />
+                              <String fx:value="JFXButtonCompactII" />
+                           </styleClass>
+                        </JFXButton>
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
+            </VBox>
          </children>
+         <padding>
+            <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
+         </padding>
       </VBox>
    </children>
-   <padding>
-      <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
-   </padding>
-</VBox>
+</StackPane>
